--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root,
+html,
+body {
+  height: 100%;
+}
+
+@layer components {
+  .btn-light {
+    @apply rounded-md bg-emerald-500 px-4 py-2 text-white hover:bg-emerald-600;
+  }
+}
